Migrate assets and tags to openapi spec
